<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.francelabs.datafari</groupId>
  <artifactId>datafari-ce</artifactId>
  <!-- Main POM of datafari -->
  <packaging>pom</packaging>
  <version>6.0-dev-Community</version>
  <name>Datafari Enterprise Search - Parent POM</name>
  <properties>
    <bcpkix-jdk15on.version>1.70</bcpkix-jdk15on.version>
    <bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>
    <cassandra.version>4.0.1</cassandra.version>
    <cassandra.sha512>2890c054666afa93fe2978c46da5db15ed7d11d60f4890574dc642bd81f7b3af40b41d3e5b8245e6c1453a165eddebeb28bcf3fef1a2b2fc6fb3b82058d7ceb0</cassandra.sha512>
    <cassandra.driver.version>4.13.0</cassandra.driver.version>
    <datafari.version>6.0-dev-Community</datafari.version>
    <datafariui.version>1.1</datafariui.version>
    <datafariui.md5>d7f50952171f691c43e342c1bc4519f6</datafariui.md5>
    <guava.version>26.0-jre</guava.version>
    <httpclient.version>4.5.13</httpclient.version>
    <java.version>1.11</java.version>
    <jena-libs.version>4.4.0</jena-libs.version>
    <json.simple.version>1.1.1</json.simple.version>
    <jackson.version>2.13.2</jackson.version>
    <jackson-databind.version>2.13.2.2</jackson-databind.version>
    <keycloak.version>7.0.1</keycloak.version>
    <log4j.version>2.17.1</log4j.version>
    <logstash.version>8.2.0</logstash.version>
    <logstash.sha512>7276117b1885c59952ba6b5551ef243e2e2a27b7da7d558e109c7b06a960ac6c8e7a2cf6b92d08309ead1cd1bbecb67c83965937deb0d61bda81a8def7d7a38e</logstash.sha512>
    <mcf.version>2.22.1</mcf.version>
    <mcf.sha512>c668c9e28ff89c6f37b0c38b2e7a69cd651afb22fdc36887489025454bb6a6c31d18a5bc27308c31a860affb840e7a00ec5c7555d43cacd9708dfd064242b8e1</mcf.sha512>
    <mcf.commit.number>38e4c78f1</mcf.commit.number>
    <netty.version>4.1.63.Final</netty.version>
    <open.distro.version>1.9.0</open.distro.version>
    <postgres.version>42.1.3</postgres.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <solr.version>8.11.1</solr.version>
    <spring.boot.version>2.6.6</spring.boot.version>
    <spring.data.cassandra.version>3.3.3</spring.data.cassandra.version>
    <spring.security.version>5.6.2</spring.security.version>
    <spring.security.kerberos.version>1.0.1.RELEASE</spring.security.kerberos.version>
    <spring.security.saml2.core.version>1.0.10.RELEASE</spring.security.saml2.core.version>
    <spring.version>5.3.18</spring.version>
    <spring.oauth2.version>2.3.8.RELEASE</spring.oauth2.version>
    <tika.version>2.4.0</tika.version>
    <tika-server.sha512>51911d738234499b6118ef03202850549f976012ba3280f21704104275f6e68abac52bbcfaf5f115d29181ccb8225cbe00dc11277cc1fdfbe71d2c4ab6995232</tika-server.sha512>
    <tika-server-commit-number>5c0793e2c</tika-server-commit-number>
    <tomcat.version>9.0.56</tomcat.version>
    <slf4j.version>1.7.36</slf4j.version>
    <xmlsec.version>2.3.0</xmlsec.version>
    <zeppelin.version>0.10.1</zeppelin.version>
    <zeppelin.sha512>59d7261adfd3b17b6648e083cc2e06cfb0c5aedd7e76498175073a80c224c6bc05ab562739b2fe8f0db566d01b99203a5fb09b0e680916b046ae58f3146695a9</zeppelin.sha512>
    <zookeeper.version>3.6.2</zookeeper.version>
    <zookeeper.sha512>caff5111bb6876b7124760bc006e6fa2523efa54b99321a3c9cd8192ea0d5596abc7d70a054b1aac9b20a411407dae7611c7aba870c23bff28eb1643ba499199</zookeeper.sha512>
  </properties>
  
  <!-- The order of modules execution is important -->
  <modules>
    <!-- Child module datafari-core added to install project dependencies in Maven 
      repo -->

    <module>datafari-solr</module>
    <module>datafari-mcf</module>
    <module>datafari-mcf-connectors-dependencies</module>
    <module>datafari-core</module>
    <module>datafari-webapp</module>
    <module>datafari-zookeeper</module>
    <module>datafari-jena</module>
    <module>datafari-cassandra</module>
    <module>datafari-tomcat</module>
    <module>datafari-analytic-stack</module>
    <module>datafari-updateprocessor</module>
    <module>datafari-docfilter-connector</module>
    <module>datafari-emptier-connector</module>
    <module>datafari-metadatacleaner-connector</module>
    <module>datafari-spacy-fastapi-connector</module>
    <module>datafari-tika-server</module>
    <module>datafari-handler</module>
    <module>datafari-mcf-scripts</module>
    <module>datafari-web-connector</module>
    <module>datafari-share-connector</module>
    <module>datafari-ui</module>
    <module>datafari-git-plugin</module>
  </modules>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0-M2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>11</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>com.googlecode.maven-download-plugin</groupId>
          <artifactId>download-maven-plugin</artifactId>
          <version>1.4.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M3</version>
          <configuration>
            <argLine> --illegal-access=permit 
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>pl.project13.maven</groupId>
          <artifactId>git-commit-id-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.0.5</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <description>
Datafari is the ideal product for those who want to search through their data, while using advanced open source technologies. Datafari combines Apache ManifoldCF and Apache Solr, to allow its users to search through many different and diverse data sources: their file shares, their cloud shares (dropbox, google drive…), their databases, but also their emails and many more.
    </description>
  <url>http://www.datafari.com/en/</url>
  <inceptionYear>2011</inceptionYear>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <organization>
    <name>France Labs - Search Experts</name>
    <url>http://www.francelabs.com/en/</url>
  </organization>
  <issueManagement>
    <system>JIRA</system>
    <url>https://datafari.atlassian.net/secure/Dashboard.jspa</url>
  </issueManagement>
  <scm>
    <connection>scm:git:https://github.com/francelabs/datafari.git</connection>
    <tag>HEAD</tag>
    <url>https://github.com/francelabs/datafari</url>
  </scm>
</project>
